syntax = "proto3";

package forge;

option go_package = "github.com/waste3d/forge/proto";

service Forge {
    // Запуск среды на фоне конфигурации
    rpc Up(UpRequest) returns (stream LogEntry);

    // Остановка среды и ее удаленние
    rpc Down(DownRequest) returns (DownResponse);

    // Получение логов
    rpc Logs(LogRequest) returns (stream LogEntry);

    // Получение статуса сервисов
    rpc Status(StatusRequest) returns (StatusResponse) {}
}   

message ServiceStatus {
    string service_name = 1;
    string resource_type = 2;
    string resource_id = 3;
    string status = 4;
    string ports = 5;
}

message StatusRequest {
    string app_name = 1;
}

message StatusResponse {
    repeated ServiceStatus services = 1;
}

message LogRequest {
    string app_name = 1;
    string service_name = 2;
    bool follow = 3;
}

message UpRequest {
    // Содержимое файла forge.yaml в виде строки
    string config_content = 1;

    // Уникальное имя для этой среды 
    string app_name = 2;
}

message DownRequest {
    string app_name = 1;
}

message DownResponse {
    string message = 1;
}

message LogEntry {
    string service_name = 1;
    int64 timestamp = 2;
    string message = 3;
}